--- a/css/styles.css
+++ b/css/styles.css
@@ -26,3 +26,9 @@
     font-family: 'Copse', serif;
     font-size: 18px;
   }
+  .container{
+    font-family: 'Quattrocento', serif;
+    text-align: center;
+    padding-top: 40px;
+    font-family: 'Gabriela', serif;
+  }
