--- a/css/styles.css
+++ b/css/styles.css
@@ -32,3 +32,13 @@
     padding-top: 40px;
     font-family: 'Gabriela', serif;
   }
+  #portfolio{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-left:18%;
+    margin-right: 16%; 
+  }
+  .col-md-3 img{
+    max-width: 100%;
+    max-height: 100%;
