--- a/css/styles.css
+++ b/css/styles.css
@@ -42,3 +42,9 @@
   .col-md-3 img{
     max-width: 100%;
     max-height: 100%;
+  }
+  .portfolio h2{
+    text-align: center;
+    padding-top:40px;
+    font-family: 'Gabriela', serif;
+  }
