--- a/css/styles.css
+++ b/css/styles.css
@@ -54,5 +54,16 @@
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
+    text-align: center;
     /* text-align: center; */
+  }
+  input[type=text],input[type=email],#comment{
+    background: transparent;
+    color: white;
+    font-size: 20px;
+    font-family: 'Copse', serif;
+  }
+  footer{
+    text-align: center;
+    font-size: large;
   }
