--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@
   .what-we-do{
     font-family: 'Quattrocento', serif;
     text-align: center;
-    padding-top: 38px;
+    padding-top: 38px
   }
   .container{
     font-family: 'Quattrocento', serif;
@@ -89,13 +89,119 @@
     text-align: center;
     /* text-align: center; */
   }
+  .title{
+    padding: 5px;
+  }
+  .contact h2{
+    text-align: center;
+    margin-top: 30px;
+    padding-top: 38px;
+    padding-bottom: 20px;
+    font-family: sans-serif;
+  }
   input[type=text],input[type=email],#comment{
     background: transparent;
     color: white;
     font-size: 20px;
     font-family: 'Copse', serif;
   }
+  .form-control:::-webkit-input-placeholder {
+    color: white;
+  }
+  #MERGE1 {
+    width: 30%;
+    margin-left: 18%;
+    margin-right: 30px;
+  }
+  #MERGE0 {
+    width: 30%;
+    margin-left: 18%;
+  }
+  #comment {
+    margin-left: 20%;
+    width: 60%;
+  }
+  button{
+    margin-left: 20%;
+    margin-bottom: 30px;
+    padding-bottom: 20px;
+  }
   footer{
     text-align: center;
     font-size: large;
+    font-family: sans-serif;
   }
+  footer p{
+    margin-top: 10px;
+  }
+  #product, #development, #design{
+    display: none;
+    font-family: 'Copse', serif;
+    font-size: 16px;
+  }
+  #product .title, #development .title, #design .title{
+    font-size: 20px;
+    font-weight: 600;
+  }
+  #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+    display: none;
+    color: black;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(255, 255, 255, 0.456);
+    position:absolute;
+    top: 20px;
+    left: 35px;
+    font-weight: bold;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 50%;
+    font-family: 'Delius Swash Caps', cursive;
+  }
+  @media only screen and (max-width: 755px){
+    #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+      width: 100%;
+      height: 100%;
+      top: 20px;
+      left: 16px;
+      padding-top: 20%;
+      /* font-size: 16px; */
+    }
+    @media only screen and (max-width: 425px){
+      #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+        width: 100%;
+        height: 100%;
+        top: 20px;
+        left: 16px;
+        padding-top: 20%;
+        font-size: 20px;
+      }
+      .col-md-3 img{
+        width:100%px;
+        margin: 20px;
+      }
+      #portfolio{
+        margin-left:8%;
+        margin-right: 16%; 
+      }
+      button{
+        margin-left: 2%;
+        padding-bottom: 30px;
+        margin-bottom: 20px;
+        /* margin-left: 10px; */
+    
+        /* margin-right: -20%; */
+      }
+      @media only screen and (max-width: 425px){
+        #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+          width: 100%;
+          height: 100%;
+          top: 20px;
+          left: 16px;
+          padding-top: 20%;
+          font-size: 20px;
+        }
+        .col-md-3 img{
+          width:100%px;
+          margin: 20px;
+        }
